Search Update Funtionality

--- a/css/search.css
+++ b/css/search.css
@@ -91,18 +91,24 @@ h4:hover {
 .form-container {
   background: #fff;
   margin-top: 40px;
-  height: 447px;
+  height: 500px;
   padding: 20px 20px;
 }
 
 form {
   width: 100%;
+  margin-bottom: 50px;
 }
 
 form .input-group {
-  display: block;
+  display: flex;
   width: 100%;
   margin: 25px 0;
+}
+
+form .input-group div {
+  width: 100%;
+  margin: 10px 15px;
 }
 
 form .input-group label {
@@ -110,7 +116,8 @@ form .input-group label {
   color: #000;
 }
 
-form .input-group input {
+form .input-group input,
+form .input-group select {
   width: 100%;
   height: 35px;
   border-radius: 5px;
@@ -132,6 +139,7 @@ form .input-group button {
   color: #fff;
   border: none;
   border-radius: 5px;
+  margin-left: 20px;
 }
 
 form .input-group button:hover {
